remove picture tags, remove parallax bg

--- a/source/pug/404-error.pug
+++ b/source/pug/404-error.pug
@@ -15,9 +15,7 @@ block content
 		.container.page-404__container
 			.page-404__wrapper
 				.page-404__img
-					picture
-						source(type="image/webp", srcset="img/picture/404.webp 1x, img/picture/404@2x.webp 2x")
-						img(src="img/picture/404.jpg", srcset="img/picture/404@2x.jpg 2x", alt="")
+					img(src="img/picture/404.jpg", alt="")
 				.page-404__content
 					.page-404__title 404.
 					.page-404__subtitle The page you were looking for could <br> not be found.
