--- a/source/pug/blog-listing.pug
+++ b/source/pug/blog-listing.pug
@@ -13,9 +13,7 @@ block content
 	article.blog-grid.blog-grid--listing
 		.blog-grid__first-screen
 			.blog-grid__first-screen-image.__js_parallax
-				picture
-					source(type="image/webp" srcset="img/picture/news/banner-blog-2.webp 1x, img/picture/news/banner-blog-2@2x.webp 2x")
-					img(src="img/picture/news/banner-blog-2.jpg", srcset="img/picture/news/banner-blog-2@2x.jpg 2x", width="1920", height="1063", alt="")
+				img(src="img/picture/news/banner-blog-2.jpg", width="1920", height="1063", alt="")
 			h1.heading.heading--size-large.blog-grid__title Blog
 		.blog-grid__container.container.container--small
 			// Filter news
