--- a/source/pug/modules/about-section.pug
+++ b/source/pug/modules/about-section.pug
@@ -10,10 +10,7 @@ section.about-section
 					+arrow-link('Services', URLS.pages.services, 'about-section__more')(data-aos="fade-up")
 			.about-section__aside.col-md-8
 				.about-section__image(data-aos="fade-up")
-					picture
-						source(type="image/webp" srcset="img/picture/modern/about.webp 1x, img/picture/modern/about@2x.webp 2x")
-						// 1х: 1110px; 2x: 2220px
-						img(src="img/picture/modern/about.jpg", srcset="img/picture/modern/about@2x.jpg 2x", width="1110", height="727", alt="Team")
+					img(src="img/picture/modern/about.jpg", width="1110", height="727", alt="Team")
 
 
 			.about-section__steps.col-12.col-md-8.order-md-last
