--- a/source/pug/modules/carousel-section.pug
+++ b/source/pug/modules/carousel-section.pug
@@ -15,40 +15,28 @@ section.carousel-section.carousel-section--separator
 			.swiper-wrapper
 				a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
 					span.project-preview__image
-						picture
-							source(type="image/webp" srcset="img/picture/carousel/4.webp 1x, img/picture/carousel/4@2x.webp 2x")
-
-							img(src="img/picture/carousel/4.jpg", srcset="img/picture/carousel/4@2x.jpg 2x", width="720", height="548", alt="water bottle")
+						img(src="img/picture/carousel/4.jpg", width="720", height="548", alt="water bottle")
 					span.project-preview__bottom
 						span.project-preview__title Water bottle
 						span.project-preview__icon
 							+icon('link-arrow2')(width="24" height="23")
 				a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
 					span.project-preview__image
-						picture
-							source(type="image/webp" srcset="img/picture/carousel/5.webp 1x, img/picture/carousel/5@2x.webp 2x")
-
-							img(src="img/picture/carousel/5.jpg", srcset="img/picture/carousel/5@2x.jpg 2x", width="334", height="255", alt="Copenhagen")
+						img(src="img/picture/carousel/5.jpg", width="334", height="255", alt="Copenhagen")
 					span.project-preview__bottom
 						span.project-preview__title Copenhagen
 						span.project-preview__icon
 							+icon('link-arrow2')(width="24" height="23")
 				a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
 					span.project-preview__image
-						picture
-							source(type="image/webp" srcset="img/picture/carousel/6.webp 1x, img/picture/carousel/6@2x.webp 2x")
-
-							img(src="img/picture/carousel/6.jpg", srcset="img/picture/carousel/6@2x.jpg 2x", width="404", height="491", alt="Kodak")
+						img(src="img/picture/carousel/6.jpg", width="404", height="491", alt="Kodak")
 					span.project-preview__bottom
 						span.project-preview__title Kodak
 						span.project-preview__icon
 							+icon('link-arrow2')(width="24" height="23")
 				a.carousel__item.project-preview.swiper-slide(href= URLS.projects.single)
 					span.project-preview__image
-						picture
-							source(type="image/webp" srcset="img/picture/carousel/7.webp 1x, img/picture/carousel/7@2x.webp 2x")
-
-							img(src="img/picture/carousel/7.jpg", srcset="img/picture/carousel/7@2x.jpg 2x", width="433", height="321", alt="Exoape")
+						img(src="img/picture/carousel/7.jpg", width="433", height="321", alt="Exoape")
 					span.project-preview__bottom
 						span.project-preview__title Exoape
 						span.project-preview__icon
