--- a/source/pug/modules/carousel-section2.pug
+++ b/source/pug/modules/carousel-section2.pug
@@ -14,27 +14,19 @@ section.carousel-section
 		.carousel-section__carousel.carousel.carousel--slide-auto.swiper-container.__js_carousel-latest-news(data-aos="fade-up")
 			.swiper-wrapper
 				a.carousel__item.carousel-card.carousel-card--greyscale.swiper-slide(href= URLS.blog.post)
-					picture
-						source(type="image/webp" srcset="img/picture/carousel/12.webp 1x, img/picture/carousel/12@2x.webp 2x")
-
-						img(src="img/picture/carousel/12.jpg", srcset="img/picture/carousel/12@2x.jpg 2x", width="662", height="510", alt="")
+					img(src="img/picture/carousel/12.jpg", width="662", height="510", alt="")
 					span.carousel-card__bottom
 						span.carousel-card__title A few words about us
 						span.carousel-card__icon
 							+icon('link-arrow')(width="29", height="29")
 				a.carousel__item.carousel-card.carousel-card--greyscale.swiper-slide(href= URLS.blog.post)
-					picture
-						source(type="image/webp" srcset="img/picture/carousel/13.webp 1x, img/picture/carousel/13@2x.webp 2x")
-						img(src="img/picture/carousel/13.jpg", srcset="img/picture/carousel/13@2x.jpg 2x", width="662", height="510", alt="")
+					img(src="img/picture/carousel/13.jpg", width="662", height="510", alt="")
 					span.carousel-card__bottom
 						span.carousel-card__title A few words about us
 						span.carousel-card__icon
 							+icon('link-arrow')(width="29", height="29")
 				a.carousel__item.carousel-card.carousel-card--greyscale.swiper-slide(href= URLS.blog.post)
-					picture
-						source(type="image/webp" srcset="img/picture/carousel/14.webp 1x, img/picture/carousel/14@2x.webp 2x")
-
-						img(src="img/picture/carousel/14.jpg", srcset="img/picture/carousel/14@2x.jpg 2x", width="662", height="510", alt="A few words about us")
+					img(src="img/picture/carousel/14.jpg", width="662", height="510", alt="A few words about us")
 					span.carousel-card__bottom
 						span.carousel-card__title A few words about us
 						span.carousel-card__icon
