--- a/source/pug/modules/main-screen.pug
+++ b/source/pug/modules/main-screen.pug
@@ -1,8 +1,6 @@
 section.main-screen
 	.main-screen__image.__js_parallax
-		picture
-			source(type="image/webp", srcset="img/picture/mono/hero.webp 1x, img/picture/mono/hero@2x.webp 2x")
-			img(src="img/picture/mono/hero.jpg", srcset="img/picture/mono/hero@2x.jpg 2x", width="1920", height="1080", alt="")
+		img(src="img/picture/mono/hero.jpg", width="1920", height="1080", alt="")
 	.main-screen__container.container.container--size-large
 		h1.main-screen__title
 			span Nobody
