--- a/source/pug/modules/services-section.pug
+++ b/source/pug/modules/services-section.pug
@@ -4,9 +4,7 @@ section.services-section
 
 		.services-section__main
 			.services-section__image(data-aos="fade-up")
-				picture
-					source(type="image/webp", srcset="img/picture/creative/services.webp 1x, img/picture/creative/services@2x.webp 2x")
-					img(src="img/picture/creative/services.jpg", srcset="img/picture/creative/services@2x.jpg 2x", width="823", height="417", alt="")
+				img(src="img/picture/creative/services.jpg", width="823", height="417", alt="")
 
 			.services-section__menu
 				ul.services-section__list
