--- a/source/pug/single-project.pug
+++ b/source/pug/single-project.pug
@@ -14,9 +14,7 @@ block content
 		.single-project__container.container.container--size-large
 			.single-project__hero.row
 				.single-project__hero-image.col-12.col-md-6.col-lg-7.col-xxl-6
-					picture
-						source(type="image/webp", srcset="img/picture/single-project/5.webp 1x, img/picture/single-project/5@2x.webp 2x")
-						img(src="img/picture/single-project/5.jpg", srcset="img/picture/single-project/5@2x.jpg 2x", width="785", height="747", alt="project photo")
+					img(src="img/picture/single-project/5.jpg", width="785", height="747", alt="project photo")
 				.single-project__hero-main.col-12.col-md-6.col-lg-5.col-xxl-6.order-md-first
 
 					h1.single-project__title
@@ -34,9 +32,7 @@ block content
 				ul.projects-listing__list
 					li.projects-listing__item.project-card.row
 						a.project-card__image.col-12.col-md-6(href='#', data-aos="fade-up")
-							picture
-								source(type="image/webp", srcset="img/picture/single-project/5.webp 1x, img/picture/single-project/5@2x.webp 2x")
-								img(src="img/picture/single-project/5.jpg", srcset="img/picture/single-project/5@2x.jpg 2x", width="785", height="747", alt="project photo")
+							img(src="img/picture/single-project/5.jpg", width="785", height="747", alt="project photo")
 						.col-12.col-md-6.order-md-first
 							.project-card__main
 								.project-card__main-left
@@ -74,9 +70,7 @@ block content
 										a.services-section__link(href='service-detail.html') Photography
 											span
 												+icon('link-arrow2')(width="24", height="23")
-							picture
-								source(type="image/webp", srcset="img/picture/single-project/2.webp 1x, img/picture/single-project/2@2x.webp 2x")
-								img(src="img/picture/single-project/2.jpg", srcset="img/picture/single-project/2@2x.jpg 2x", width="459", height="642", alt="")
+							img(src="img/picture/single-project/2.jpg", width="459", height="642", alt="")
 
 			include modules/project-other.pug
 
