--- a/source/pug/about-us.pug
+++ b/source/pug/about-us.pug
@@ -26,7 +26,7 @@ block content
 
 					.about-video-section__aside.col-12.col-md.order-first.order-md-0(data-aos="fade-up")
 						.about-video-section__video.video-block
-							img(src='img/picture/common/poster.jpg', srcset='img/picture/common/poster@2x.jpg 2x', alt='')
+							img(src='img/picture/common/poster.jpg', alt='')
 
 			include modules/statistics
 
@@ -48,15 +48,9 @@ block content
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-large.webp 1x, img/picture/home/accordion-large@2x.webp 2x")
-										// 1х: 810px; 2x: 1620px
-										img(src="img/picture/home/accordion-large.jpg", srcset="img/picture/home/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+									img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
 								.accordion__item-right.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-small.webp 1x, img/picture/home/accordion-small@2x.webp 2x")
-										// 1х: 348px; 2x: 696px
-										img(src="img/picture/home/accordion-small.jpg", srcset="img/picture/home/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+									img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 									.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
 
@@ -68,15 +62,9 @@ block content
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-large.webp 1x, img/picture/home/accordion-large@2x.webp 2x")
-										// 1х: 810px; 2x: 1620px
-										img(src="img/picture/home/accordion-large.jpg", srcset="img/picture/home/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+									img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
 								.accordion__item-right.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-small.webp 1x, img/picture/home/accordion-small@2x.webp 2x")
-										// 1х: 348px; 2x: 696px
-										img(src="img/picture/home/accordion-small.jpg", srcset="img/picture/home/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+									img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 									.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
 
@@ -88,15 +76,9 @@ block content
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-large.webp 1x, img/picture/home/accordion-large@2x.webp 2x")
-										// 1х: 810px; 2x: 1620px
-										img(src="img/picture/home/accordion-large.jpg", srcset="img/picture/home/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+									img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
 								.accordion__item-right.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-small.webp 1x, img/picture/home/accordion-small@2x.webp 2x")
-										// 1х: 348px; 2x: 696px
-										img(src="img/picture/home/accordion-small.jpg", srcset="img/picture/home/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+									img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 									.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
 
@@ -108,15 +90,9 @@ block content
 						.accordion__item-body
 							.row
 								.accordion__item-left.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-large.webp 1x, img/picture/home/accordion-large@2x.webp 2x")
-										// 1х: 810px; 2x: 1620px
-										img(src="img/picture/home/accordion-large.jpg", srcset="img/picture/home/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+									img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
 								.accordion__item-right.col-12.col-md-6
-									picture
-										source(type="image/webp" srcset="img/picture/home/accordion-small.webp 1x, img/picture/home/accordion-small@2x.webp 2x")
-										// 1х: 348px; 2x: 696px
-										img(src="img/picture/home/accordion-small.jpg", srcset="img/picture/home/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+									img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 									.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
 
@@ -126,9 +102,7 @@ block content
 					- let i = 0;
 					while i < 4
 						li.partners__item.col-12.col-sm-6.col-lg-3(data-aos="fade-up")
-							picture
-								source(type="image/webp" srcset="img/picture/partners/" + (i + 1) + ".webp 1x, img/picture/partners/" + (i + 1) + "@2x.webp 2x")
-								img(src="img/picture/partners/" + (i + 1) + ".png", srcset="img/picture/partners/" + (i + 1) + "@2x.png 2x", width= PARTNERS_LOGO[i].w, height= PARTNERS_LOGO[i].h, alt= PARTNERS_LOGO[i].alt)
+							img(src="img/picture/partners/" + (i + 1) + ".png", width= PARTNERS_LOGO[i].w, height= PARTNERS_LOGO[i].h, alt= PARTNERS_LOGO[i].alt)
 						- i++;
 
 		section.about-us__team-section.team-section.team-section--pb-0
@@ -139,9 +113,7 @@ block content
 						.team-section__item(data-aos="fade-up")
 							.member-card
 								.member-card__image
-									picture
-										source(type="image/webp", srcset="img/picture/team/" + item.image.url + ".webp 1x, img/picture/team/" + item.image.url + "@2x.webp 2x")
-										img(src="img/picture/team/" + item.image.url + ".jpg" srcset="img/picture/team/" + item.image.url + "@2x.jpg 2x", width= item.image.w, height= item.image.h, alt= item.name + " photo")
+									img(src="img/picture/team/" + item.image.url + ".jpg", width= item.image.w, height= item.image.h, alt= item.name + " photo")
 								.member-card__info
 									.member-card__title= item.name
 									.member-card__post= item.post
