--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -70,37 +70,21 @@ block content
 				.demo__title Projects
 				.demo__row
 					.demo__col
-						picture
-							source(type="image/webp" srcset="img/picture/demo/project-1.webp 1x, img/picture/demo/project-1@2x.webp 2x")
-							img(src="img/picture/demo/project-1.jpg", srcset="img/picture/demo/project-1@2x.jpg 2x", alt="")
+						img(src="img/picture/demo/project-1.jpg", alt="")
 					.demo__col
-						picture
-							source(type="image/webp" srcset="img/picture/demo/project-2.webp 1x, img/picture/demo/project-2@2x.webp 2x")
-							img(src="img/picture/demo/project-2.jpg", srcset="img/picture/demo/project-2@2x.jpg 2x", alt="")
+						img(src="img/picture/demo/project-2.jpg", alt="")
 					.demo__col
-						picture
-							source(type="image/webp" srcset="img/picture/demo/project-3.webp 1x, img/picture/demo/project-3@2x.webp 2x")
-							img(src="img/picture/demo/project-3.jpg", srcset="img/picture/demo/project-3@2x.jpg 2x", alt="")
-						picture
-							source(type="image/webp" srcset="img/picture/demo/project-4.webp 1x, img/picture/demo/project-4@2x.webp 2x")
-							img(src="img/picture/demo/project-4.jpg", srcset="img/picture/demo/project-4@2x.jpg 2x", alt="")
+						img(src="img/picture/demo/project-3.jpg", alt="")
+						img(src="img/picture/demo/project-4.jpg", alt="")
 		section.demo__section.demo__section--blog
 			.container.container--size-large
 				.demo__title Practical blog pages
 				.demo__row
 					.demo__col
-						picture
-							source(type="image/webp" srcset="img/picture/demo/blog-1.webp 1x, img/picture/demo/blog-1@2x.webp 2x")
-							img(src="img/picture/demo/blog-1.jpg", srcset="img/picture/demo/blog-1@2x.jpg 2x", alt="")
+						img(src="img/picture/demo/blog-1.jpg", alt="")
 					.demo__col
-						picture
-							source(type="image/webp" srcset="img/picture/demo/blog-2.webp 1x, img/picture/demo/blog-2@2x.webp 2x")
-							img(src="img/picture/demo/blog-2.jpg", srcset="img/picture/demo/blog-2@2x.jpg 2x", alt="")
+						img(src="img/picture/demo/blog-2.jpg", alt="")
 					.demo__col
-						picture
-							source(type="image/webp" srcset="img/picture/demo/blog-3.webp 1x, img/picture/demo/blog-3@2x.webp 2x")
-							img(src="img/picture/demo/blog-3.jpg", srcset="img/picture/demo/blog-3@2x.jpg 2x", alt="")
+						img(src="img/picture/demo/blog-3.jpg", alt="")
 					.demo__col
-						picture
-							source(type="image/webp" srcset="img/picture/demo/blog-4.webp 1x, img/picture/demo/blog-4@2x.webp 2x")
-							img(src="img/picture/demo/blog-4.jpg", srcset="img/picture/demo/blog-4@2x.jpg 2x", alt="")
+						img(src="img/picture/demo/blog-4.jpg", alt="")
