--- a/source/pug/mixins/_demo-card.pug
+++ b/source/pug/mixins/_demo-card.pug
@@ -7,16 +7,14 @@ mixin demo-card(pic, galHref, text, href, className, coming)
 		else
 			a.demo-card__image(href= href, target="_blank")
 				//-(href="img/picture/demo/" + galHref + ".jpg")
-				picture
-					source(type="image/webp", srcset="img/picture/demo/" + pic + ".webp 1x, img/picture/demo/" + pic + "@2x.webp 2x")
-					img(src="img/picture/demo/" + pic + ".jpg", srcset="img/picture/demo/" + pic + "@2x.jpg 2x", alt="")
+				img(src="img/picture/demo/" + pic + ".jpg", alt="")
 				.demo-card__btn
 					+icon('link-arrow')
 			a.demo-card__link(href=href, target="_blank")= text
 				+icon('link-arrow')(width='22', height='22')
 		//-else
 			a.demo-card__image(href="img/picture/demo/" + galHref + ".jpg", data-fancybox='gallery')
-				img(src="img/picture/demo/" + pic + ".jpg", srcset="img/picture/demo/" + pic + "@2x.jpg 2x", alt="")
+				img(src="img/picture/demo/" + pic + ".jpg", alt="")
 				.demo-card__btn
 					+icon('link-arrow')
 			a.demo-card__link(href=href)= text
