--- a/source/pug/mixins/_intro-card.pug
+++ b/source/pug/mixins/_intro-card.pug
@@ -2,6 +2,6 @@ mixin intro-card(item)
 	- let tag = item.cardTag ? item.cardTag : 'div';
 	#{tag}.intro__card&attributes(attributes)
 		a.animsition-link(href= item.href)
-			img(src= item.img + '.jpg', srcset= item.img + '@2x.jpg 2x', alt= item.title)
+			img(src= item.img + '.jpg', alt= item.title)
 		h3.intro__card-title
 			a.animsition-link(href= item.href)= item.title
