--- a/source/pug/mixins/_latest-news-card.pug
+++ b/source/pug/mixins/_latest-news-card.pug
@@ -2,7 +2,7 @@ mixin latest-news-card(item)
 	- let tag = item.tag ? item.tag : 'div';
 	#{tag}.preview-card(tabindex="0")&attributes(attributes)
 		.preview-card__image
-			img(src= item.img.path + item.img.name + '.jpg', srcset= item.img.path + item.img.name + '@2x.jpg 2x', width="350", height="352", alt="")
+			img(src= item.img.path + item.img.name + '.jpg', width="350", height="352", alt="")
 		.preview-card__content
 			time.preview-card__date(datetime= item.date.datetime)= item.date.text
 			h3.preview-card__heading= item.title
