--- a/source/pug/mixins/_news-card.pug
+++ b/source/pug/mixins/_news-card.pug
@@ -2,9 +2,7 @@ mixin news-card(image, day, month, year, tag, title, text, href)
 	li.news-card.__js_masonry-item.col-12.col-lg-4.col-md-6&attributes(attributes)
 		.news-card__wrapper
 			.news-card__pic
-				picture
-					source(type="image/webp", srcset="img/picture/news/" + image.n + ".webp 1x, img/picture/news/" + image.n + "@2x.webp 2x")
-					img(src="img/picture/news/" + image.n + ".jpg", srcset="img/picture/news/" + image.n + "@2x.jpg 2x", width= image.w, height= image.h alt="")
+				img(src="img/picture/news/" + image.n + ".jpg", width= image.w, height= image.h alt="")
 			.news-card__content
 				.news-card__top
 					.news-card__date
