--- a/source/pug/mixins/_news-card2.pug
+++ b/source/pug/mixins/_news-card2.pug
@@ -6,15 +6,10 @@ mixin news-card2(image, day, month, year, tag, title, text, href, modCl, elemCl,
 	li(class= (elemCl ? elemCl + ' ' : '') + 'news-card ' + classes)&attributes(attributes)
 		.news-card__wrapper
 			.news-card__pic
-				picture
-					if image.mobile
-						source(type="image/webp", media="(min-width: " + breakpoint + "px)", srcset="img/picture/news/" + image.n + ".webp 1x, img/picture/news/" + image.n + "@2x.webp 2x")
-						source(type="image/webp", srcset="img/picture/news/" + image.mobile + ".webp 1x, img/picture/news/" + image.mobile + "@2x.webp 2x")
-						source(media="(min-width: " + breakpoint + "px)", srcset="img/picture/news/" + image.n + ".jpg 1x, img/picture/news/" + image.n + "@2x.jpg 2x")
-						img(src="img/picture/news/" + image.mobile + ".jpg", srcset="img/picture/news/" + image.mobile + "@2x.jpg 2x", alt="")
-					else
-						source(type="image/webp", srcset="img/picture/news/" + image.n + ".webp 1x, img/picture/news/" + image.n + "@2x.webp 2x")
-						img(src="img/picture/news/" + image.n + ".jpg", srcset="img/picture/news/" + image.n + "@2x.jpg 2x", width= image.w, height= image.h alt="")
+				if image.mobile
+					img(src="img/picture/news/" + image.mobile + ".jpg", alt="")
+				else
+					img(src="img/picture/news/" + image.n + ".jpg", width= image.w, height= image.h alt="")
 			.news-card__content
 				.news-card__top
 					.news-card__date
