--- a/source/pug/modules/about-video-section--modern-page.pug
+++ b/source/pug/modules/about-video-section--modern-page.pug
@@ -11,10 +11,7 @@ section.about-video-section.about-video-section--pb-0
 
 			.about-video-section__aside.col-12.col-md.order-first.order-md-0(data-aos="fade-up")
 				.about-video-section__video.video-block
-					picture
-						source(type="image/webp" srcset="img/picture/common/video-poster-2.webp 1x, img/picture/common/video-poster-2@2x.webp 2x")
-						// 1х: 810px; 2x: 1620px
-						img(src="img/picture/common/video-poster-2.jpg", srcset="img/picture/common/video-poster-2@2x.jpg 2x", width="810", height="539", alt="About us video")
+					img(src="img/picture/common/video-poster-2.jpg", width="810", height="539", alt="About us video")
 
 					a.video-block__btn.play-btn(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk", aria-label="Play button")
 						+icon('triangle')(width="17", height="19")
