--- a/source/pug/modules/creative-hero.pug
+++ b/source/pug/modules/creative-hero.pug
@@ -5,6 +5,4 @@ section.creative-hero
 			h1.creative-hero__title Undertake projects of&nbsp;any complexity
 			+btn(false, 'Join now', url = '#', cl = 'creative-hero__btn')
 		.creative-hero__image
-			picture
-				source(type="image/webp", srcset="img/picture/creative/hero.webp 1x, img/picture/creative/hero@2x.webp 2x")
-				img(src="img/picture/creative/hero.jpg", srcset="img/picture/creative/hero@2x.jpg 2x", width="1100", height="980", alt="")
+			img(src="img/picture/creative/hero.jpg", width="1100", height="980", alt="")
