--- a/source/pug/modules/hero.pug
+++ b/source/pug/modules/hero.pug
@@ -1,8 +1,6 @@
 section.hero
 	.hero__bg.__js_parallax
-		picture
-			source(type="image/webp" srcset="img/picture/home/hero.webp 1x, img/picture/home/hero@2x.webp 2x")
-			img(src="img/picture/home/hero.jpg", srcset="img/picture/home/hero@2x.jpg 2x", width="1920", height="1080", alt="")
+		img(src="img/picture/home/hero.jpg", width="1920", height="1080", alt="")
 	.hero__container.container.container--size-large
 		header.hero__header
 			.container.container--size-large
