--- a/source/pug/modules/meta.pug
+++ b/source/pug/modules/meta.pug
@@ -2,9 +2,7 @@ section.meta
 	.row
 		.col-12.col-lg-4(data-aos="fade-up")
 			.meta__image
-				picture
-					source(type="image/webp", srcset="img/picture/single-project/1.webp 1x, img/picture/single-project/1@2x.webp 2x")
-					img(src="img/picture/single-project/1.jpg", srcset="img/picture/single-project/1@2x.jpg 2x", alt="")
+				img(src="img/picture/single-project/1.jpg", alt="")
 		.col-12.col-lg-8
 			.meta__info
 				.meta__info-item(data-aos="fade-up")
