--- a/source/pug/modules/our-services2.pug
+++ b/source/pug/modules/our-services2.pug
@@ -16,15 +16,9 @@ section.our-services
 				.accordion__item-body
 					.row
 						.accordion__item-left.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-large.webp 1x, img/picture/mono/accordion-large@2x.webp 2x")
-								// 1х: 810px; 2x: 1620px
-								img(src="img/picture/mono/accordion-large.jpg", srcset="img/picture/mono/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+							img(src="img/picture/mono/accordion-large.jpg", width="810", height="530", alt="Concept")
 						.accordion__item-right.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-small.webp 1x, img/picture/mono/accordion-small@2x.webp 2x")
-								// 1х: 348px; 2x: 696px
-								img(src="img/picture/mono/accordion-small.jpg", srcset="img/picture/mono/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+							img(src="img/picture/mono/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
 
@@ -36,15 +30,9 @@ section.our-services
 				.accordion__item-body
 					.row
 						.accordion__item-left.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-large.webp 1x, img/picture/mono/accordion-large@2x.webp 2x")
-								// 1х: 810px; 2x: 1620px
-								img(src="img/picture/mono/accordion-large.jpg", srcset="img/picture/mono/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+							img(src="img/picture/mono/accordion-large.jpg", width="810", height="530", alt="Concept")
 						.accordion__item-right.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-small.webp 1x, img/picture/mono/accordion-small@2x.webp 2x")
-								// 1х: 348px; 2x: 696px
-								img(src="img/picture/mono/accordion-small.jpg", srcset="img/picture/mono/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+							img(src="img/picture/mono/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
 
@@ -56,15 +44,9 @@ section.our-services
 				.accordion__item-body
 					.row
 						.accordion__item-left.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-large.webp 1x, img/picture/mono/accordion-large@2x.webp 2x")
-								// 1х: 810px; 2x: 1620px
-								img(src="img/picture/mono/accordion-large.jpg", srcset="img/picture/mono/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+							img(src="img/picture/mono/accordion-large.jpg", width="810", height="530", alt="Concept")
 						.accordion__item-right.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-small.webp 1x, img/picture/mono/accordion-small@2x.webp 2x")
-								// 1х: 348px; 2x: 696px
-								img(src="img/picture/mono/accordion-small.jpg", srcset="img/picture/mono/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+							img(src="img/picture/mono/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
 
@@ -76,14 +58,8 @@ section.our-services
 				.accordion__item-body
 					.row
 						.accordion__item-left.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-large.webp 1x, img/picture/mono/accordion-large@2x.webp 2x")
-								// 1х: 810px; 2x: 1620px
-								img(src="img/picture/mono/accordion-large.jpg", srcset="img/picture/mono/accordion-large@2x.jpg 2x", width="810", height="530", alt="Concept")
+							img(src="img/picture/mono/accordion-large.jpg", width="810", height="530", alt="Concept")
 						.accordion__item-right.col-12.col-md-6
-							picture
-								source(type="image/webp" srcset="img/picture/mono/accordion-small.webp 1x, img/picture/mono/accordion-small@2x.webp 2x")
-								// 1х: 348px; 2x: 696px
-								img(src="img/picture/mono/accordion-small.jpg", srcset="img/picture/mono/accordion-small@2x.jpg 2x", width="348", height="287", alt="Concept")
+							img(src="img/picture/mono/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
