--- a/source/pug/modules/portfolio-section2.pug
+++ b/source/pug/modules/portfolio-section2.pug
@@ -11,16 +11,10 @@ section.portfolio-section
 				li.portfolio-section__item.__js_masonry-item(class= cl2)
 					a.project-preview.project-preview--elastic(class="project-preview" + cardCl, href= URLS.projects.single)
 						span.project-preview__image
-							picture
-								if item.image.isMobile
-									source(type="image/webp" media="(min-width: 992px)", srcset="img/picture/common/portfolio-section/" + item.image.url + ".webp 1x, img/picture/common/portfolio-section/" + item.image.url + "@2x.webp 2x")
-									source(type="image/webp" srcset="img/picture/common/portfolio-section/" + item.image.url + "-mobile.webp 1x, img/picture/common/portfolio-section/" + item.image.url + "-mobile@2x.webp 2x")
-									source(media="(min-width: 992px)", srcset="img/picture/common/portfolio-section/" + item.image.url + ".jpg 1x, img/picture/common/portfolio-section/" + item.image.url + "@2x.jpg 2x")
-
-									img(src="img/picture/common/portfolio-section/" + item.image.url + "-mobile.jpg", srcset="img/picture/common/portfolio-section/" + item.image.url + "-mobile@2x.jpg 2x",  alt= item.title)
-								else
-									source(type="image/webp", srcset="img/picture/common/portfolio-section/" + item.image.url + ".webp 1x, img/picture/common/portfolio-section/" + item.image.url + "@2x.webp 2x")
-									img(src="img/picture/common/portfolio-section/" + item.image.url + ".jpg", srcset="img/picture/common/portfolio-section/" + item.image.url + "@2x.jpg 2x", width= item.image.w, height= item.image.h, alt= item.title)
+							if item.image.isMobile
+								img(src="img/picture/common/portfolio-section/" + item.image.url + "-mobile.jpg",  alt= item.title)
+							else
+								img(src="img/picture/common/portfolio-section/" + item.image.url + ".jpg", width= item.image.w, height= item.image.h, alt= item.title)
 						span.project-preview__bottom
 							span.project-preview__title(title= item.title)= item.title
 							span.project-preview__icon
