--- a/source/pug/modules/project-other.pug
+++ b/source/pug/modules/project-other.pug
@@ -2,8 +2,8 @@ section.project-other
 	.row
 		.col-12.col-md-6
 			.project-other__image(data-aos="fade-up")
-				img(src='img/picture/single-project/3.jpg', srcset='img/picture/single-project/3@2x.jpg 2x', alt='')
+				img(src='img/picture/single-project/3.jpg', alt='')
 		.col-12.col-md-6
 			.project-other__image.project-other__image--small(data-aos="fade-up")
-				img(src='img/picture/single-project/4.jpg', srcset='img/picture/single-project/4@2x.jpg 2x', alt='')
+				img(src='img/picture/single-project/4.jpg', alt='')
 				.project-other__text(data-aos="fade-up") Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula euripidis hinc partem ei est.
