--- a/source/pug/modules/projects-listing.pug
+++ b/source/pug/modules/projects-listing.pug
@@ -13,9 +13,7 @@ section.projects-listing
 			each item, index in VERTICAL_PROJECTS
 				li.projects-listing__item.project-card.row.g-0(data-title= item.title, data-category= item.category ? item.category : "", data-url= URLS.projects.single)
 					a.project-card__image.col-12.col-md-6.col-lg-7(href= URLS.projects.single, data-aos= index > 0 ? "fade-up" : "")
-						picture
-							source(type="image/webp", srcset="img/picture/vertical-projects/" + item.image + ".webp 1x, img/picture/vertical-projects/" + item.image + "@2x.webp 2x")
-							img(src="img/picture/vertical-projects/" + item.image + ".jpg", srcset="img/picture/vertical-projects/" + item.image + "@2x.jpg 2x", width="908", height="976", alt="project photo")
+						img(src="img/picture/vertical-projects/" + item.image + ".jpg", width="908", height="976", alt="project photo")
 					//-.project-card__main.col-12.col-md-6.col-lg-5.order-md-first
 						.project-card__main-left
 							if item.category
