--- a/source/pug/modules/start-project.pug
+++ b/source/pug/modules/start-project.pug
@@ -35,7 +35,5 @@ section.start-project
 					while i < 6
 						li.partners__item.col-12.col-sm-6.col-md-3.col-lg-12.col-xl-6(data-aos="fade-up")
 							//-.col-auto
-							picture
-								source(type="image/webp" srcset="img/picture/partners/" + (i + 1) + ".webp 1x, img/picture/partners/" + (i + 1) + "@2x.webp 2x")
-								img(src="img/picture/partners/" + (i + 1) + ".png", srcset="img/picture/partners/" + (i + 1) + "@2x.png 2x", width= PARTNERS_LOGO[i].w, height= PARTNERS_LOGO[i].h, alt= PARTNERS_LOGO[i].alt)
+							img(src="img/picture/partners/" + (i + 1) + ".png", width= PARTNERS_LOGO[i].w, height= PARTNERS_LOGO[i].h, alt= PARTNERS_LOGO[i].alt)
 						- i++;
