--- a/source/pug/modules/team-section.pug
+++ b/source/pug/modules/team-section.pug
@@ -6,9 +6,7 @@ section.team-section.team-section--pb-0
 				.team-section__item
 					.member-card(data-aos="fade-up")
 						.member-card__image
-							picture
-								source(type="image/webp", srcset="img/picture/team/" + item.image.url + ".webp 1x, img/picture/team/" + item.image.url + "@2x.webp 2x")
-								img(src="img/picture/team/" + item.image.url + ".jpg" srcset="img/picture/team/" + item.image.url + "@2x.jpg 2x", width= item.image.w, height= item.image.h, alt= item.name + " photo")
+							img(src="img/picture/team/" + item.image.url + ".jpg", width= item.image.w, height= item.image.h, alt= item.name + " photo")
 						.member-card__info
 							.member-card__title= item.name
 							.member-card__post= item.post
