--- a/source/pug/modules/works.pug
+++ b/source/pug/modules/works.pug
@@ -15,28 +15,19 @@ section.works
 				button.carousel__btn.carousel__btn--next(type="button") Next
 			.swiper-wrapper
 				a.carousel__item.carousel-card.swiper-slide(href= URLS.projects.single)
-					picture
-						source(type="image/webp" srcset="img/picture/carousel/1.webp 1x, img/picture/carousel/1@2x.webp 2x")
-						// 1х: 662px; 2x: 1324px
-						img(src="img/picture/carousel/1.jpg", srcset="img/picture/carousel/1@2x.jpg 2x", width="662", height="510", alt="Desk Issue 0.1")
+					img(src="img/picture/carousel/1.jpg", width="662", height="510", alt="Desk Issue 0.1")
 					span.carousel-card__bottom
 						span.carousel-card__title Desk Issue 0.1
 						span.carousel-card__icon
 							+icon('link-arrow')(width="29", height="29")
 				a.carousel__item.carousel-card.swiper-slide(href= URLS.projects.single)
-					picture
-						source(type="image/webp" srcset="img/picture/carousel/2.webp 1x, img/picture/carousel/2@2x.webp 2x")
-						// 1х: 662px; 2x: 1324px
-						img(src="img/picture/carousel/2.jpg", srcset="img/picture/carousel/2@2x.jpg 2x", width="662", height="510", alt="Desk Issue 0.1")
+					img(src="img/picture/carousel/2.jpg", width="662", height="510", alt="Desk Issue 0.1")
 					span.carousel-card__bottom
 						span.carousel-card__title Desk Issue 0.1
 						span.carousel-card__icon
 							+icon('link-arrow')(width="29", height="29")
 				a.carousel__item.carousel-card.swiper-slide(href= URLS.projects.single)
-					picture
-						source(type="image/webp" srcset="img/picture/carousel/3.webp 1x, img/picture/carousel/3@2x.webp 2x")
-						// 1х: 662px; 2x: 1324px
-						img(src="img/picture/carousel/3.jpg", srcset="img/picture/carousel/3@2x.jpg 2x", width="662", height="510", alt="Desk Issue 0.1")
+					img(src="img/picture/carousel/3.jpg", width="662", height="510", alt="Desk Issue 0.1")
 					span.carousel-card__bottom
 						span.carousel-card__title Desk Issue 0.1
 						span.carousel-card__icon
