--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -7,7 +7,7 @@ block variables
 	- let isIntro = true;
 
 block header
-	header.header.header--demo.header--white.header--separator.header--absolute
+	header.header.header--demo.header--white.header--separator.header--absolute.header--centered
 		.header__container.container.container--size-large
 			a.header__logo.logo(href= URLS.home.default)
 				+icon('logo')(width="76" height="19")
