--- a/source/pug/modules/our-services.pug
+++ b/source/pug/modules/our-services.pug
@@ -2,24 +2,24 @@ section.our-services
 	.our-services__container.container.container--size-large
 		header.our-services__header.our-services__header--large(data-aos="fade-up")
 			.row
-				.col-12.col-md-6.col-lg-5(data-aos="fade-up")
+				.col-12.col-md-6.col-xl-5.col-xxl-3(data-aos="fade-up")
 					h2.our-services__title.our-services__title--upper Our Services
-				.col-12.col-md-12.col-xl-5.order-md-1.order-xl-0(data-aos="fade-up")
+				.col-12.col-md-12.col-xl-5.col-xxl-6.order-md-1.order-xl-0(data-aos="fade-up")
 					.our-services__short We’ve worked with a wide array of clients across the globe to apply design fundamentals of elegance, simplicity
-				.col-12.col-md-auto.col-xl-2.ml-auto.text-md-right(data-aos="fade-up")
+				.col-12.col-md-auto.col-xl-2.col-xxl-3.ml-auto.text-md-right(data-aos="fade-up")
 					+arrow-link('View all', URLS.pages.services, 'our-services__more our-services__more--negative-top arrow-link--white')
 
 		.our-services__accordion.accordion
 			.accordion__item(data-aos="fade-up")
 				button.accordion__item-header(type="button")
 					span.row.align-items-md-center
-						span.accordion__item-title.col-11.col-md-6 Design
-						span.accordion__item-short.col-11.col-md-5 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
+						span.accordion__item-title.col-11.col-md-5 Design
+						span.accordion__item-short.col-11.col-md-6 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 				.accordion__item-body
 					.row
-						.accordion__item-left.col-12.col-md-6
+						.accordion__item-left.col-12.col-md-6.col-lg-5
 							img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
-						.accordion__item-right.col-12.col-md-6
+						.accordion__item-right.col-12.col-md-6.col-lg-7
 							img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
@@ -27,13 +27,13 @@ section.our-services
 			.accordion__item(data-aos="fade-up")
 				button.accordion__item-header(type="button")
 					span.row.align-items-md-center
-						span.accordion__item-title.col-11.col-md-6 Development
-						span.accordion__item-short.col-11.col-md-5 We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design.
+						span.accordion__item-title.col-11.col-md-5 Development
+						span.accordion__item-short.col-11.col-md-6 We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design.
 				.accordion__item-body
 					.row
-						.accordion__item-left.col-12.col-md-6
+						.accordion__item-left.col-12.col-md-6.col-lg-5
 							img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
-						.accordion__item-right.col-12.col-md-6
+						.accordion__item-right.col-12.col-md-6.col-lg-7
 							img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
@@ -41,13 +41,13 @@ section.our-services
 			.accordion__item(data-aos="fade-up")
 				button.accordion__item-header(type="button")
 					span.row.align-items-md-center
-						span.accordion__item-title.col-11.col-md-6 Graphic
-						span.accordion__item-short.col-11.col-md-5 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
+						span.accordion__item-title.col-11.col-md-5 Graphic
+						span.accordion__item-short.col-11.col-md-6 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 				.accordion__item-body
 					.row
-						.accordion__item-left.col-12.col-md-6
+						.accordion__item-left.col-12.col-md-6.col-lg-5
 							img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
-						.accordion__item-right.col-12.col-md-6
+						.accordion__item-right.col-12.col-md-6.col-lg-7
 							img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
@@ -55,13 +55,13 @@ section.our-services
 			.accordion__item(data-aos="fade-up")
 				button.accordion__item-header(type="button")
 					span.row.align-items-md-center
-						span.accordion__item-title.col-11.col-md-6 Wordpress
-						span.accordion__item-short.col-11.col-md-5 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
+						span.accordion__item-title.col-11.col-md-5 Wordpress
+						span.accordion__item-short.col-11.col-md-6 Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 				.accordion__item-body
 					.row
-						.accordion__item-left.col-12.col-md-6
+						.accordion__item-left.col-12.col-md-6.col-lg-5
 							img(src="img/picture/home/accordion-large.jpg", width="810", height="530", alt="Concept")
-						.accordion__item-right.col-12.col-md-6
+						.accordion__item-right.col-12.col-md-6.col-lg-7
 							img(src="img/picture/home/accordion-small.jpg", width="348", height="287", alt="Concept")
 
 							.accordion__item-text In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are.
