--- a/source/scss/blocks/member-card.scss
+++ b/source/scss/blocks/member-card.scss
@@ -22,9 +22,14 @@
 
 	&--elastic {
 		display: block;
+		width: 100%;
 
 		@include media(lg) {
 			display: inline-block;
+		}
+
+		@include media(xxl) {
+			width: auto;
 		}
 
 		#{$self}__image {
@@ -37,9 +42,9 @@
 				@include media(lg) {
 					display: inline-block;
 					max-width: 100%;
-					width: auto;
-					height: auto;
-					object-fit: none;
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
 				}
 			}
 		}
