services, team fix

--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -155,11 +155,11 @@
 
 	let MEMBERS_CARDS_2 = [
 		{name: 'Bobby Fish', post: 'Designer', addCl: 'team__item--first team__item--row', bootstrapCl: 'col-lg-5', image: {url: '3', w: '474', h: '450'}},
-		{name: 'Sam Flex', post: 'Director', image: {url: '1', w: '385', h: '548'}},
-		{name: 'Kate Larson', post: 'Manager', addCl: 'team__item--center', image: {url: '2', w: '355', h: '241'}},
-		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--right', image: {url: '5', w: '326', h: '548'}},
-		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--margin-negative',  bootstrapCl: 'offset-lg-4', image: {url: '4-1', w: '355', h: '548'}},
-		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--left-shift', bootstrapCl: 'col-lg-6 align-self-lg-end', image: {url: '6', w: '355', h: '281'}},
+		{name: 'Sam Flex', post: 'Director', addCl: 'team__item--2', image: {url: '1', w: '385', h: '548'}},
+		{name: 'Kate Larson', post: 'Manager', addCl: 'team__item--3 team__item--center', image: {url: '2', w: '355', h: '241'}},
+		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--4 team__item--right', image: {url: '5', w: '326', h: '548'}},
+		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--5 team__item--margin-negative',  bootstrapCl: 'offset-lg-4', image: {url: '4-1', w: '355', h: '548'}},
+		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--6 team__item--left-shift', bootstrapCl: 'col-lg-6 align-self-lg-end', image: {url: '6', w: '355', h: '281'}},
 		{name: 'Bobby Fish', post: 'Designer', addCl: 'team__item--last team__item--row', bootstrapCl: 'col-lg-5 offset-lg-1', image: {url: '7', w: '474', h: '450'}}
 	];
 
@@ -199,8 +199,8 @@
 
 	let SERVICES_CARDS = [
 		{text: 'Photography <br>& Illustration', addCl: 'services__item--first', bootstrapCl: 'col-12 col-sm-6 col-lg-5 col-xl-6', image: {url: '1', w: '810', h: '783'}},
-		{text: 'Mobile <br>apps design', addCl: 'services__item--margin-negative', bootstrapCl: 'col-12 col-sm-6 col-lg-4', image: {url: '2', w: '410', h: '490'}},
-		{text: 'Web development', addCl: 'services__item--left-shift', bootstrapCl: 'col-12 col-sm-6 col-lg-8', image: {url: '3', w: '616', h: '496'}},
+		{text: 'Mobile <br>apps design', addCl: 'services__item--second services__item--margin-negative', bootstrapCl: 'col-12 col-sm-6 col-lg-4', image: {url: '2', w: '410', h: '490'}},
+		{text: 'Web development', addCl: 'services__item--third services__item--left-shift', bootstrapCl: 'col-12 col-sm-6 col-lg-8', image: {url: '3', w: '616', h: '496'}},
 		{text: 'Marketing', addCl: 'services__item--last', bootstrapCl: 'col-12 col-sm-6 col-lg-10 offset-lg-1', image: {url: '4', w: '1238', h: '527'}}
 	];
 
