--- a/source/pug/team.pug
+++ b/source/pug/team.pug
@@ -16,8 +16,8 @@ block header
 block content
 	article.article.team
 		.article__container.container.container--size-large
-			.row
-				header.article__header.col-12.col-lg-7
+			.row.team__row
+				header.article__header.team__header.col-12.col-lg-7
 					h1.article__title Our <br>magic team
 					.article__text The best design team in NYC
 
