--- a/source/scss/blocks/team.scss
+++ b/source/scss/blocks/team.scss
@@ -1,4 +1,28 @@
 .team {
+	&__row {
+		@include media(lg) {
+			margin-right: -20px;
+			margin-left: -20px;
+		}
+
+		@include media(xl) {
+			margin-right: -40px;
+			margin-left: -40px;
+		}
+	}
+
+	&__header {
+		@include media(lg) {
+			padding-right: 20px;
+			padding-left: 20px;
+		}
+
+		@include media(xl) {
+			padding-right: 40px;
+			padding-left: 40px;
+		}
+	}
+
 	&__item {
 		margin-top: 30px;
 
@@ -18,6 +42,20 @@
 			margin-top: 116px;
 		}
 
+		img {
+			@include media(full) {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
+
+		.member-card {
+			@include media(full) {
+				width: 100%;
+			}
+		}
+
 		&--first {
 			margin-left: auto;
 
@@ -28,6 +66,58 @@
 			@include media(xl) {
 				padding-left: 52px;
 			}
+
+			img {
+				@include media(full) {
+					width: vw(474);
+					height: vh(450);
+				}
+			}
+		}
+
+		&--2 {
+			img {
+				@include media(full) {
+					width: vw(385);
+					height: vh(553);
+				}
+			}
+		}
+
+		&--3 {
+			img {
+				@include media(full) {
+					width: vw(355);
+					height: vh(246);
+				}
+			}
+		}
+
+		&--4 {
+			img {
+				@include media(full) {
+					width: vw(326);
+					height: vh(553);
+				}
+			}
+		}
+
+		&--5 {
+			img {
+				@include media(full) {
+					width: vw(355);
+					height: vh(553);
+				}
+			}
+		}
+
+		&--6 {
+			img {
+				@include media(full) {
+					width: vw(355);
+					height: vh(285);
+				}
+			}
 		}
 
 		&--last {
@@ -37,6 +127,13 @@
 
 			@include media(xl) {
 				margin-left: 8.3333333333%;
+			}
+
+			img {
+				@include media(full) {
+					width: vw(474);
+					height: vh(455);
+				}
 			}
 		}
 
@@ -92,6 +189,11 @@
 			@include media(xxl) {
 				margin-top: -134px;
 				margin-bottom: -64px;
+			}
+
+			@include media(full) {
+				margin-top: -434px;
+				margin-bottom: -42px;
 			}
 		}
 
