--- a/source/pug/index-2.pug
+++ b/source/pug/index-2.pug
@@ -34,7 +34,7 @@ block header
 
 block content
 	article.demo.demo--new
-		section#start.demo__section.demo__section--banner(style='background-image: url("img/picture/demo/banner.jpg")')
+		section#start.demo__section.demo__section--banner(style='background-image: url("img/picture/demo/banner-light.jpg")')
 		section#demo.demo__section.demo__section--choose
 			.container.container--size-large.demo__container
 				.demo__block-title
