--- a/source/scss/blocks/header-column.scss
+++ b/source/scss/blocks/header-column.scss
@@ -43,18 +43,12 @@
 
 	&__bottom {
 		display: flex;
-		flex-direction: column;
-		align-items: center;
+		align-items: flex-end;
 		justify-content: space-between;
 		margin-top: 80px;
 
 		@include media(lg) {
 			margin-top: 191px;
-		}
-
-		@include media(xxl) {
-			flex-direction: row;
-			align-items: flex-end;
 		}
 	}
 
@@ -63,7 +57,7 @@
 		height: 80px;
 		transform: rotate(90deg);
 
-		@include media(lg) {
+		@include media(xl) {
 			width: 142px;
 			height: 142px;
 		}
@@ -73,15 +67,16 @@
 		width: 300px;
 		height: 83px;
 		margin-top: 20px;
+		margin-left: 20px;
 
-		@include media(lg) {
+		@include media(xl) {
 			width: 818px;
 			height: 216px;
 		}
 
-		@include media(xxl) {
+		/*@include media(xxl) {
 			margin-top: 0;
-		}
+		}*/
 	}
 
 	&--bottom {
